# python-socket-throttle

./: .gitignore  README.md  pipeslow.py  pyproject.toml  recvslow.py  sendslow.py  socket_throttle.py  tests.py
examples/: paramiko_scp.py  recv.py  send.py
socket_throttle/: __init__.py  asyncio.py  core.py  files.py  leaky_bucket.py  sockets.py
